--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h1 class="font-bold text-4xl">商品一覧</h1>
+  <h1 class="font-bold text-4xl">商品一覧i</h1>
   <p>Find me in app/views/products/index.html.erb</p>
   <%= link_to '新しい順', products_path(latest: "true") %>
   <%= link_to '古い順', products_path(old: "true") %>
